src/test/deca/codegen/invalid/plusOverflow.deca
{
    float a= 200000000000000000000000000000000000000.0; //10^38
    float b= 200000000000000000000000000000000000000.0; //10^38

    float f = a+b;
}
//ERROR Error : arithmetic overflow.
